tests/lean/empty.lean.expected.out
empty.lean:6:39: error: failed to synthesize type class instance for
⊢ nonempty Empty
empty.lean:6:25: warning: declaration 'v2' uses sorry
